<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/spinnerWrapper"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:background="@null" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            app:srcCompat="@mipmap/ic_keyboard_arrow_down_black_18dp" />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/dayWrapper"
        android:layout_margin="16dp"
        android:layout_below="@+id/spinnerWrapper"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtSenin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="10dp"
            android:layout_marginRight="18dp"
            android:text="@string/senin" />

        <TextView
            android:id="@+id/txtSelasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="10dp"
            android:layout_marginRight="18dp"
            android:text="@string/selasa" />

        <TextView
            android:id="@+id/txtRabu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="10dp"
            android:layout_marginRight="18dp"
            android:text="@string/rabu" />

        <TextView
            android:id="@+id/txtKamis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="10dp"
            android:layout_marginRight="18dp"
            android:text="@string/kamis" />

        <TextView
            android:id="@+id/txtJumat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="10dp"
            android:layout_marginRight="16dp"
            android:text="@string/jumat" />

        <TextView
            android:id="@+id/txtSabtu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="10dp"
            android:layout_marginRight="16dp"
            android:text="@string/sabtu" />

        <TextView
            android:id="@+id/txtMinggu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="10dp"
            android:text="@string/minggu" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_below="@+id/dayWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>