<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context="com.yondev.yaumiyah.LandingPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/button1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="300dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/ic_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/putih"
            android:textSize="35dp"
            android:text="@string/rencanakan_ramalan_anda" />

        <TextView
            android:id="@+id/textView3"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/putih"
            android:textSize="18dp"
            android:text="@string/salah_satu_kunci_sukses" />
    </LinearLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:maxWidth="300dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_transparent"
        android:textColor="@color/putih"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:textSize="18dp"
        android:text="@string/mulai" />

</RelativeLayout>
